--- a/serverless.yml
+++ b/serverless.yml
@@ -16,8 +16,8 @@ service: geekout
 #app: your-app-name
 #org: your-org-name
 
-plugins:
-  - serverless-offline
+#plugins:
+#  - serverless-offline
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
