--- a/serverless.yml
+++ b/serverless.yml
@@ -77,7 +77,7 @@ functions:
     handler: donations/create.create
     events:
       - http:
-          path: api/donations
+          path: api/donation
           method: post
           cors: false
 
@@ -85,7 +85,7 @@ functions:
     handler: donations/get.get
     events:
       - http:
-          path: api/donations
+          path: api/donation
           method: get
           cors: false
 
