update index to store all attri

--- a/serverless.yml
+++ b/serverless.yml
@@ -173,7 +173,7 @@ resources:
               - AttributeName: division
                 KeyType: HASH
             Projection:
-              ProjectionType: 'KEYS_ONLY'
+              ProjectionType: 'ALL'
             ProvisionedThroughput:
               ReadCapacityUnits: 1
               WriteCapacityUnits: 1
